--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-loader": "^9.1.2",
     "copy-webpack-plugin": "^11.0.0",
     "nodemon": "^2.0.20",
+    "swiper": "^9.0.5",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
   },
